# finix-language

./: .gitignore  Cargo.toml  README.md  bytecode_compiler.rs  chunk.rs  collections.rs  compiler.rs  debug.rs  document.rs  environment.rs  error.rs  gc.rs  gui.rs  lib.rs  main.rs  manifest.rs  math.rs  parser.rs  registry.rs  rust-toolchain.toml  scope.rs  server.rs  syntax_spec.md  system_io.rs  target.rs  value.rs  vm.rs
.cargo/: config.toml
.github/skills/finix-language-architecture/: SKILL.md
MyProject/: main.fnx
ast/: Cargo.toml
ast/src/: checker.rs  environment.rs  error.rs  lib.rs  printer.rs  visitor.rs
bootimage/: Cargo.toml  rust-toolchain.toml
bootimage/src/: main.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  token.rs
