[package]
name = "finix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "ast",
    "lexer",
    "bootimage",
]

[workspace.dependencies]
ast = { path = "./ast" }
lexer = { path = "./lexer" }
clap = { version = "4.4", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0"

[features]
default = ["gui"]
llvm = ["dep:inkwell"]
gui = ["dep:egui", "dep:eframe"]

[dependencies]
ast = { workspace = true }
lexer = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

tokio = { version = "1.35", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
inkwell = { version = "0.2.0", features = ["llvm15-0"], optional = true }
egui = { version = "0.26", optional = true }
eframe = { version = "0.26", optional = true }

[lib]
path = "lib.rs"

[[bin]]
name = "finix"
path = "main.rs"